crates/aura-app/tests/ui/projection_snapshot_policy_private.stderr
error[E0603]: module `workflows` is private
 --> tests/ui/projection_snapshot_policy_private.rs:2:23
  |
2 |     let _ = aura_app::workflows::snapshot_policy::chat_snapshot;
  |                       ^^^^^^^^^ private module    ------------- function `chat_snapshot` is not publicly re-exported
  |
note: the module `workflows` is defined here
 --> src/lib.rs
  |
  | pub(crate) mod workflows;
  | ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0603]: module `workflows` is private
 --> tests/ui/projection_snapshot_policy_private.rs:3:23
  |
3 |     let _ = aura_app::workflows::snapshot_policy::contacts_snapshot;
  |                       ^^^^^^^^^ private module    ----------------- function `contacts_snapshot` is not publicly re-exported
  |
note: the module `workflows` is defined here
 --> src/lib.rs
  |
  | pub(crate) mod workflows;
  | ^^^^^^^^^^^^^^^^^^^^^^^^
