crates/aura-app/tests/ui/projection_snapshot_policy_private.rs
fn main() {
    let _ = aura_app::workflows::snapshot_policy::chat_snapshot;
    let _ = aura_app::workflows::snapshot_policy::contacts_snapshot;
}
